--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -84,9 +84,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  5]\n",
+      " [ 2  1]\n",
+      " [ 2 13]\n",
+      " [ 2  9]\n",
+      " [ 1 10]] [[2 2]]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def play_game():\n",
@@ -94,69 +106,24 @@
     "    deck = served['deck']\n",
     "    players = served['players']\n",
     "    joker = served['joker']\n",
-    "    thrown_cards = [[]]\n",
-    "    thrown_card = []\n",
-    "    player_turn = 1\n",
-    "    finished = 1\n",
+    "    print(players[1], joker)\n",
     "\n",
-    "    while finished:\n",
-    "        print('-------------------------------------------')\n",
-    "        print('Player', str(player_turn), 'Turn:')\n",
-    "        print('Joker:', joker)\n",
-    "        print('-------------------------------------------')\n",
-    "        print('P'+str(player_turn)+\": You Have \\n\", players[player_turn])\n",
-    "        print('-------------------------------------------')\n",
-    "\n",
-    "        pick = input('P' + str(player_turn)+': [Pick] Deck=>1, Thrown=>2 :- ')\n",
-    "        if int(pick) == 1:\n",
-    "            picked = deck[:1]\n",
-    "            players[player_turn] = np.append(players[player_turn], picked, axis=0)\n",
-    "            deck = np.delete(deck, 0, axis=0)\n",
-    "            print('P', str(player_turn), \": !You picked from Deck\", picked)\n",
-    "        else:\n",
-    "            if len(thrown_card) > 0:\n",
-    "\n",
-    "                print(players[player_turn])\n",
-    "                players[player_turn] = np.append(players[player_turn], [thrown_card], axis=0)\n",
-    "                print('Thron Card ==> ', players[player_turn])\n",
-    "                print('P'+str(player_turn), \": !You picked Thrown Card\", thrown_card)\n",
-    "            else:\n",
-    "                picked = deck[:1]\n",
-    "                players[player_turn] = np.append(players[player_turn], picked, axis=0)\n",
-    "                deck = np.delete(deck, 0, axis=0)\n",
-    "                print('P', str(player_turn), \":! No Thrown Card !\\nYou picked from Deck:\", picked)\n",
-    "\n",
-    "        finished = check_cards(players[player_turn], joker)\n",
-    "\n",
-    "        if finished == 0:\n",
-    "            print('!! Player', str(player_turn), \" Won !! \\n\", players[player_turn], '\\n Joker: ', joker)\n",
-    "            exit()\n",
-    "\n",
-    "        print('-------------------------------------------')\n",
-    "        print('P' + str(player_turn) + \": You Have \\n\", players[player_turn])\n",
-    "        print('Joker:', joker)\n",
-    "        print('-------------------------------------------')\n",
-    "\n",
-    "        throw = int(input('P'+str(player_turn)+': [Throw] :- ')) - 1\n",
-    "        thrown_card = players[player_turn][throw]\n",
-    "        players[player_turn] = np.delete(players[player_turn], throw, axis=0)\n",
-    "        print('Player', str(player_turn), \":! You Threw \", thrown_card)\n",
-    "\n",
-    "        if player_turn == len(players):\n",
-    "            player_turn = 1\n",
-    "            # finished = 0\n",
-    "        else:\n",
-    "            player_turn += 1"
+    "play_game()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "check_cards(players[player_turn], joker)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
